# Embedded-Linux

./: .gitignore  README.md
AdminLinux_Task1/: README.md  task_script.sh
AdminLinux_Task2/: README.md  main.c
AdminLinux_Task3/: README.md  Task3_script.sh
AdminLinux_Task4/: README.md  main.c
AdminLinux_Task5/: README.md  process1.c  process2.c
AdminLinux_Task5/additional_task/: myprint.c
AdminLinux_Task6/: README.md  TCP_client.c  TCP_server.c
Cpp_task1/: README.md
Cpp_task2/: FileActions.cpp  README.md
Cpp_task3/: README.md
Cpp_task3/src/: main.cpp
Cpp_task4/: README.md  TempLog.txt  main.cpp
Cpp_task4/HAL/: TempSensor.cpp  TempSensor.hpp
Cpp_task4/Helper_Apps/: Display.cpp  Display.hpp  Logger.cpp  Logger.hpp
Cpp_task5/: CMakeLists.txt  README.md
Cpp_task5/app/: main.cpp
Cpp_task5/inc/: IOstream.hpp  Istream.hpp  Ostream.hpp  SevenSegment.hpp  Stream.hpp
Cpp_task5/src/: CMakeLists.txt  IOstream.cpp  Istream.cpp  Ostream.cpp  SevenSegments.cpp  Stream.cpp
Cpp_task5/toolchain/: toolchain-rpi3.cmake
Cpp_task6/: README.md  threads_task.cpp
Cpp_task7/: CMakeLists.txt  README.md  vsomeip-service.json  vsomeip_client.cpp  vsomeip_client.hpp  vsomeip_service.cpp  vsomeip_service.hpp
Cpp_task8/: Cross_compile.md  README.md
Cpp_task8/PC_side/: CMakeLists.txt  vsomeip.json  vsomeip_server.cpp  vsomeip_server.hpp
Cpp_task8/rpi_side/: CMakeLists.txt  rpi-toolchain.cmake  (+2 more)
Device_drivers_task1/: README.md
Device_drivers_task1/userspace_app/led_service/: CMakeLists.txt  package.xml
Device_drivers_task1/userspace_app/led_service/src/: led_server.cpp
Device_drivers_task2/: README.md
Embedded_linux_task1/: README.md  main.c
Embedded_linux_task10/: README.md
Embedded_linux_task11/: README.md
Embedded_linux_task2/: README.md
Embedded_linux_task3/: README.md
Embedded_linux_task4/: Makefile  README.md  linkerscript.ld
Embedded_linux_task5/: README.md
Embedded_linux_task6/: README.md
Embedded_linux_task7/: README.md  myInitramfs
Embedded_linux_task8/: README.md  dualpart_init  myInitramfs
Embedded_linux_task9/: README.md  myexample.service  serviceapp  serviceapp.c
(+30 files in other folders)
